--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,15 @@ body
 	background-color: #F5F5F5;
 }
 
+table {
+	margin: 0 auto;
+
+}
+
+.table1{
+width: 500px;
+}
+
 .btn-transparent
 {
 	background-color: transparent;
@@ -27,6 +36,7 @@ body
 th
 {
 	color: #009688;
+	text-align: left;
 }
 
 .container
@@ -35,6 +45,8 @@ th
 	box-shadow: 5px 5px 5px #B0BEC5;
 	padding: 3%;
 	margin:0 auto;
+	max-width: 1280px;
+	width: 85%;
 }
 
 i
